<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin"
    android:paddingTop="@dimen/margin"
    android:paddingRight="@dimen/margin"
    android:paddingBottom="@dimen/margin"
    android:scrollbarThumbHorizontal="@drawable/logobco"
    android:scrollbarThumbVertical="@drawable/logobco"
    android:scrollbarTrackVertical="@drawable/logobco">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="301dp"
        android:layout_height="72dp"
        android:src="@drawable/logobco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logobco"
        tools:ignore="ContentDescription" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/textLabel"

        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="156dp">

        <EditText
            android:id="@+id/etname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/padding_normal"
            android:hint="@string/prompt_nombre"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:theme="@style/textLabel"
        app:layout_constraintTop_toBottomOf="@id/tilname">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_menu_email"
            android:drawablePadding="@dimen/padding_normal"

            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:theme="@style/textLabel"
        app:layout_constraintTop_toBottomOf="@id/tilEmail">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/padding_normal"

            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            app:errorEnabled="true"
            app:errorIconDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/textLabel"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="397dp">

        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/padding_normal"

            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            app:errorEnabled="true"
            app:errorIconDrawable="@null" />


    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/box2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="72dp"
        android:buttonTint="@color/colorAccent"
        android:text="@string/box2"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSignInUp"
        app:layout_constraintEnd_toStartOf="@+id/box1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword2" />

    <CheckBox
        android:id="@+id/box1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="69dp"
        android:buttonTint="@color/colorAccent"
        android:text="@string/box1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSignInUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/box2"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword2"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnSignInUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:theme="@style/btnLoginStyle"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tvSignInUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/sign_in_free"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btnSignInUp"
        tools:layout_editor_absoluteX="7dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
