<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity"
    android:background="@color/black">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/usuario_vic_imagen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/images_avatar" />
    <TextView
        android:id="@+id/usuario_vic_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usuario_vic_imagen"
        android:padding="10dp"
        android:background="@drawable/textos"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:text="Nombre"/>
    <TextView
        android:id="@+id/usuario_vic_ciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usuario_vic_nombre"
        android:padding="10dp"
        android:background="@drawable/textos"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:text="Ciudad"/>
    <TextView
        android:id="@+id/usuario_vic_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usuario_vic_ciudad"
        android:padding="10dp"
        android:background="@drawable/textos"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:text="Estado"/>

    <Button
        android:id="@+id/enviar_mensaje_usuario_vic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usuario_vic_estado"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/botonblanco"
        android:text="@string/enviar_mensaje"
        android:textSize="17dp"
        android:textStyle="bold" />


    <Button

        android:id="@+id/cancelar_mensaje_usuario_vic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enviar_mensaje_usuario_vic"
        android:background="@drawable/botonblanco"
        android:layout_margin="10dp"
        android:text="@string/cancelar_solicitud"
        android:textSize="17dp"
        android:visibility="gone"
        android:textStyle="bold"/><![CDATA[

    app:layout_constraintTop_toTopOf="parent" />





    ]]>

    <TextView
        android:id="@+id/helloworld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="141dp"
        android:text="@string/cambiar_idioma"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RelativeLayout
        android:id="@+id/showlangdialog"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="141dp"
        android:background="@color/teal_200"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="100dp"
            android:background="@android:color/transparent"
            android:dropDownVerticalOffset="35dp"
            android:gravity="center"
            android:popupBackground="@color/colorAccent"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/botonblanco" />

    </RelativeLayout>
</RelativeLayout>
